--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
           name: Install npm dependencies
           command: |
             npm install --save
+      - snyk/scan
+      - run:
+          name: Run Unit Tests
 workflows:
   build_and_test:
     jobs:
