--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
           command: |
             npm install --save
       - snyk/scan
-      - run:
-          name: Run Unit Tests
+      #- run:
+      #   name: Run Unit Tests
 #test
 workflows:
   build_and_test:
