--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,10 @@ jobs:
       - image: circleci/node:12
     steps:
       - checkout
-      - run:
-          name: Install npm dependencies
-          command: |
-            npm install --save
+      #- run:
+      #    name: Install npm dependencies
+      #    command: |
+      #     npm install --save
       - snyk/scan
       #- run:
       #   name: Run Unit Tests
