--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
   run_tests:
     docker:
-      - image: circleci/node:12
+      - image: cimg/openjdk:17.0.1
     steps:
       - checkout
       #- run:
