--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -520,12 +520,12 @@ workflows:
       and:
         - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
     jobs:
-      #- path-filtering/filter:
-      #    base-revision: << pipeline.git.branch >>
-      #    config-path: .circleci/config.yml
-      #    mapping: |
-      #      ^((?!docs/).)*$ trigger-src true
-      #      docs/.* trigger-docs true
+      - path-filtering/filter:
+          base-revision: << pipeline.git.branch >>
+          config-path: .circleci/config.yml
+          mapping: |
+            ^((?!docs/).)*$ trigger-src true
+            docs/.* trigger-docs true
       - secrethub:
           context:
             - cicd-orchestrator
