--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,17 @@ parameters:
     type: string
     default: "cicd"
     description: "Release version number to use to publish the Docker nightly images ?"
-
+  run-container-test:
+    type: boolean
+    default: false
 orbs:
   gravitee: gravitee-io/gravitee@1.0
   secrethub: secrethub/cli@1.1.0
   slack: circleci/slack@4.8.1
   path-filtering: circleci/path-filtering@0.1.2
+
+# This allows you to use CircleCI's dynamic configuration feature
+setup: true
 
 jobs:
   secrethub:
@@ -515,20 +520,21 @@ workflows:
       - run_postman_tests_psql:
           requires:
             - approve-tests-mongo-psql
-  setup:
+  containter-test-check:
     when:
       and:
         - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
     jobs:    
       - path-filtering/filter:
           base-revision: << pipeline.git.branch >>
-          config-path: .circleci/config.yml
+          config-path: ".circleci/config.yml"
           mapping: |
-            gravitee-am-reporter/.* testcontainer_tests true
+            gravitee-am-reporter/.* run-container-test true
   testcontainer_tests:
-    when:
-      and:
-        - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
+    when: << pipeline.parameters.run-containter-test >>
+  #  when:
+  #    and:
+  #      - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
     jobs:
       - secrethub:
           context:
