--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ parameters:
     description: "Release version number to use to publish the Docker nightly images ?"
   run-container-test:
     type: boolean
-    default: false
+    default: true
 orbs:
   gravitee: gravitee-io/gravitee@1.0
   secrethub: secrethub/cli@1.1.0
