--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -45,7 +45,9 @@ parameters:
     type: string
     default: "cicd"
     description: "Release version number to use to publish the Docker nightly images ?"
-
+  run-container-test:
+    type: boolean
+    default: false
 orbs:
   gravitee: gravitee-io/gravitee@1.0
   secrethub: secrethub/cli@1.1.0
@@ -504,11 +506,21 @@ workflows:
               ignore:
                 - master
                 # - /^[0-999].[0-999].x/ # Ignore support branches, because they are checked with noightly ? Would make sense...
-
+      - approve-tests-mongo-psql:
+          type: approval
+          requires: 
+            - process_pull_request
+      - run_postman_tests_mongo:
+          requires:
+            - approve-tests-mongo-psql
+      - run_postman_tests_psql:
+          requires:
+            - approve-tests-mongo-psql
   testcontainer_tests:
-    when:
-      and:
-        - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
+    when: << pipeline.parameters.run-container-test >>   
+    #when:
+    #  and:
+    #    - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
     jobs:
       - secrethub:
           context:
