--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,5 @@ workflows:
           base-revision: << pipeline.git.branch >>
           config-path: ".circleci/workflows.yml"
           mapping: |
-            gravitee-am-reporter/.* run-container-test true 
+            gravitee-am-reporter/.* run-container-test true
+            gravitee-am-repository/.* run-container-test true
