--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -323,7 +323,7 @@ jobs:
             echo $AZURE_DOCKER_REGISTRY_PASSWORD | docker login --username $AZURE_DOCKER_REGISTRY_USERNAME --password-stdin graviteeio.azurecr.io
             docker push ${IMAGE_TAG}
  
-  publish-images-azure-registry-test:
+  snyk-scan-test:
     docker:
       - image: cimg/openjdk:17.0.1
     resource_class: small
@@ -331,33 +331,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: /tmp
-      - setup_remote_docker
-      - run:
-          name: Compute Tag for Docker images
-          command: |
-            # Compute tag with branch name, commmit SHA and timestamp. Then slugify it to be sure it can be handled by Docker
-            export TAG=$(echo "${CIRCLE_BRANCH:0:15}-${CIRCLE_SHA1:0:7}-$(date +%s)" | sed -E 's/[~^]+//g' | sed -E 's/[^a-zA-Z0-9]+/-/g' | sed -E 's/^-+|-+$//g' | tr A-Z a-z)
-            # Workaround for sharing this variable to the next steps
-            echo "export TAG=$TAG" >> $BASH_ENV
-            echo "Docker images will be tagged with: ${TAG}"
-            echo $TAG > /tmp/docker-tag.txt
-      - run:
-          name: Build & Publish Management API Docker Image to Azure Registry Test
-          command: |
-            export AM_VERSION=$(mvn -s /tmp/.circleci.settings.xml -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-            echo "Gravitee AM version: ${AM_VERSION}"
-            export IMAGE_TAG=graviteeio.azurecr.io/am-management-api-test:${TAG}
-            docker build -f docker/management-api/Dockerfile-dev --build-arg GRAVITEEAM_VERSION=${AM_VERSION} -t ${IMAGE_TAG} /tmp
-      - snyk/scan:
-          severity-threshold: high
-          docker-image-name: ${IMAGE_TAG}
-          target-file: "Dockerfile"
-          fail-on-issues: true
-      - run:
-          name: Push Docker image
-          command: |
-            echo $AZURE_DOCKER_REGISTRY_PASSWORD | docker login --username $AZURE_DOCKER_REGISTRY_USERNAME --password-stdin graviteeio.azurecr.io
-            docker push ${IMAGE_TAG}
+      - snyk/scan       
 
   publish-images-azure-registry:
     docker:
@@ -531,7 +505,7 @@ workflows:
       and:
         - equal: [ pull_requests, << pipeline.parameters.gio_action >> ]
     jobs:
-      - publish-images-azure-registry-test
+      - snyk-scan-test
       - gravitee/d_pull_requests_secrets:
           context: cicd-orchestrator
           name: pr_secrets_resolution
