--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -331,13 +331,22 @@ jobs:
       - checkout
       - attach_workspace:
           at: /tmp
+      - setup_remote_docker
       - run:
-          name: Build & Publish Management API Docker Image to Azure Registry Test
+          name: Compute Tag for Docker images
           command: |
-            #export AM_VERSION=$(mvn -s /tmp/.circleci.settings.xml -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-            #echo "Gravitee AM version: ${AM_VERSION}"
-            AM_VERSION="3.17.0-SNAPSHOT"
-            export IMAGE_TAG=graviteeio.azurecr.io/am-management-api-test:test-a12
+            # Compute tag with branch name, commmit SHA and timestamp. Then slugify it to be sure it can be handled by Docker
+            export TAG=$(echo "${CIRCLE_BRANCH:0:15}-${CIRCLE_SHA1:0:7}-$(date +%s)" | sed -E 's/[~^]+//g' | sed -E 's/[^a-zA-Z0-9]+/-/g' | sed -E 's/^-+|-+$//g' | tr A-Z a-z)
+            # Workaround for sharing this variable to the next steps
+            echo "export TAG=$TAG" >> $BASH_ENV
+            echo "Docker images will be tagged with: ${TAG}"
+            echo $TAG > /tmp/docker-tag.txt
+      - run:
+          name: Build & Publish Management API Docker Image to Azure Registry
+          command: |
+            export AM_VERSION=$(mvn -s /tmp/.circleci.settings.xml -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+            echo "Gravitee AM version: ${AM_VERSION}"
+            export IMAGE_TAG=graviteeio.azurecr.io/am-management-api:${TAG}
             docker build -f docker/management-api/Dockerfile-dev --build-arg GRAVITEEAM_VERSION=${AM_VERSION} -t ${IMAGE_TAG} /tmp
       - snyk/scan:
           severity-threshold: high
