--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -349,15 +349,15 @@ jobs:
             export IMAGE_TAG=graviteeio.azurecr.io/am-management-api:testsnyk
             docker build -f docker/management-api/Dockerfile-dev --build-arg GRAVITEEAM_VERSION=${AM_VERSION} -t ${IMAGE_TAG} /tmp
       - snyk/scan:
-     #     severity-threshold: high
+          severity-threshold: high
           docker-image-name: graviteeio.azurecr.io/am-management-api:testsnyk
      #     target-file: "Dockerfile"
-     #     fail-on-issues: true
-     # - run:
-     #     name: Push Docker image Test
-     #     command: |
-     #       echo $AZURE_DOCKER_REGISTRY_PASSWORD | docker login --username $AZURE_DOCKER_REGISTRY_USERNAME --password-stdin graviteeio.azurecr.io
-     #       docker push graviteeio.azurecr.io/am-management-api:testsnyk      
+          fail-on-issues: true
+      - run:
+          name: Push Docker image Test
+          command: |
+            echo $AZURE_DOCKER_REGISTRY_PASSWORD | docker login --username $AZURE_DOCKER_REGISTRY_USERNAME --password-stdin graviteeio.azurecr.io
+            docker push graviteeio.azurecr.io/am-management-api:testsnyk      
 
   publish-images-azure-registry:
     docker:
